arquitectura por capas, dao, dto y repository

--- a/class-14-architecture-layer/architecture-layer-p2/package.json
+++ b/class-14-architecture-layer/architecture-layer-p2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-router-p1",
+  "name": "architecture-layer-p2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
