--- a/class-14-architecture-layer/architecture-layer-p1/package.json
+++ b/class-14-architecture-layer/architecture-layer-p1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-router-p1",
+  "name": "architecture-layer-p1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
