--- a/class-17-optimzed-and-compression/api-compress-p1/docker-compose.yml
+++ b/class-17-optimzed-and-compression/api-compress-p1/docker-compose.yml
@@ -2,14 +2,14 @@ version: "3.0"
 
 # Services to run
 services:
-  mongo_strategy: # name of BD service
+  mongo_db: # name of BD service
     image: mongo
-    container_name: mongo_layer_api_mocks
+    container_name: api_compress_p1
     ports:
       - 27017:27017
     volumes:
-      - mongoapimocks:/data/configdb
-      - mongoapimocks:/data/db
+      - apicompress:/data/configdb
+      - apicompress:/data/db
     # restart: always
 
 networks:
@@ -18,4 +18,4 @@ networks:
     driver: bridge
 
 volumes:
-  mongoapimocks:
+  apicompress:
